--- a/arch/arm64/configs/pdx203_defconfig
+++ b/arch/arm64/configs/pdx203_defconfig
@@ -1,5 +1,8 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Special"
 # CONFIG_LOCALVERSION_AUTO is not set
+#MGLRU 
+CONFIG_LRU_GEN=y 
+CONFIG_LRU_GEN_ENABLED=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
