pdx203_defconfig: Enable Clang LTO Thin

--- a/arch/arm64/configs/pdx203_defconfig
+++ b/arch/arm64/configs/pdx203_defconfig
@@ -1,5 +1,7 @@
 CONFIG_LOCALVERSION="-Special"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LTO_CLANG_THIN=y
+CONFIG_CFI_CLANG=y
 #MGLRU 
 CONFIG_LRU_GEN=y 
 CONFIG_LRU_GEN_ENABLED=y
